Fixed mobile overflowing issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,29 @@
-#titleText{
+/*#titleText{
 	background-color: rgba(255,255,255,0.1);
 	color: #95a5a6;
-	position: absolute;
 	font-family: Serif;
-	font-size: 100px;
+	font-size: 300%;
 	font-weight: bold;
 	text-align: center;
 	left: 0;
 	right: 0;
 	top: 30px;
+	position: absolute;
+	float: top;
+	max-height: 20%;
+}*/
+
+#titleText{
+	background-color: rgba(255,255,255,0.1);
+	color: #95a5a6;
+	font-family: Serif;
+	font-size: 300%;
+	font-weight: bold;
+	text-align: center;
+	position: absolute;
+	left:0;
+	right:0;
+	top: 0;
 }
 
 #maincontent{
@@ -22,6 +37,7 @@
 }
 
 #hangmanBox{
+	float: left;
 	border-radius: 20px;
 	background-color: #7f8c8d;
 	text-align: center;
