--- a/css/style.css
+++ b/css/style.css
@@ -52,4 +52,5 @@ body{
   background-position: 50% 50%;
   background-repeat: no-repeat;
   position: absolute;
+  float: left;
 }
